<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="RocketModel"
            type="com.example.bibin.codereview.model.RocketLaunchModels" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/end_16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_72"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/begin_end_72" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_16_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/end_16dp" />


            <TextView
                android:id="@+id/filight_number_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                android:text="@string/flight_number"
                android:textColor="@color/purple_700"
                app:layout_constraintEnd_toStartOf="@+id/guideline_16_end"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_16"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/flight_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{@string/number_id(RocketModel.flightNumber)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toStartOf="@+id/guideline_16_end"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_16"
                app:layout_constraintTop_toBottomOf="@+id/filight_number_txt"
                tool:text="@string/app_name" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_1dp"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flight_number" />

            <TextView
                android:id="@+id/flight_name_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/flight_name"
                android:textColor="@color/purple_700"
                app:layout_constraintEnd_toStartOf="@+id/guideline_16_end"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_16"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <TextView
                android:id="@+id/flight_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{RocketModel.name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toStartOf="@+id/guideline_16_end"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_16"
                app:layout_constraintTop_toBottomOf="@+id/flight_name_txt"
                tool:text="@string/app_name" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_1dp"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flight_name" />

            <TextView
                android:id="@+id/flight_details_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/flight_details"
                android:textColor="@color/purple_700"
                app:layout_constraintEnd_toStartOf="@+id/guideline_16_end"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_16"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <TextView
                android:id="@+id/flight_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{RocketModel.details}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toStartOf="@+id/guideline_16_end"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_16"
                app:layout_constraintTop_toBottomOf="@+id/flight_details_txt"
                tool:text="@string/app_name" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_1dp"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flight_details" />

            <TextView
                android:id="@+id/flight_date_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/flight_date"
                android:textColor="@color/purple_700"
                app:layout_constraintEnd_toStartOf="@+id/guideline_16_end"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_16"
                app:layout_constraintTop_toBottomOf="@+id/divider4" />

            <TextView
                android:id="@+id/flight_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{RocketModel.dateUTC}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toStartOf="@+id/guideline_16_end"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_16"
                app:layout_constraintTop_toBottomOf="@+id/flight_date_txt"
                tool:text="@string/app_name" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider5"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_1dp"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flight_date" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>